test/files/neg/t5702-neg-bad-brace.check
t5702-neg-bad-brace.scala:8: error: Unmatched closing brace '}' ignored here
      case List(1, _*} =>
                     ^
t5702-neg-bad-brace.scala:11: error: eof expected but '}' found.
}
^
two errors found
